[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-snowflake-runner"
version = "0.2.2"
description = "A Tabular Helper API library that wraps snowflake-connector-python with typed connection management, multi-format profile support, and a normalized query return shape."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["snowflake", "connector", "sql", "warehouse", "tabular", "helper"]
dependencies = [
    "snowflake-connector-python>=3.6",
    "cryptography>=48.0.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "deptry>=0.25.1",
    "pip-audit>=2.10.1",
    "pytest-cov>=7.1.0",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-snowflake-runner"
Issues = "https://github.com/tha-guy-nate/tha-snowflake-runner/issues"
Changelog = "https://github.com/tha-guy-nate/tha-snowflake-runner/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_snowflake_runner"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
known_first_party = ["tha_snowflake_runner"]
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# tomllib is stdlib on 3.11+ and backed by the declared `tomli` dependency on 3.10 (see profiles.py) —
# deptry can't resolve that the two are the same thing, so DEP001 false-positives on tomllib alone.
DEP001 = ["tomllib"]

[tool.coverage.run]
source = ["src"]
